Remove incremental versioning (#22)
