# src/api/restapi/operations/version_incremental/incremental_delete_responses.go
@@ -1,104 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package version_incremental
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	models "api/models"
-)
-
-// IncrementalDeleteNoContentCode is the HTTP code returned for type IncrementalDeleteNoContent
-const IncrementalDeleteNoContentCode int = 204
-
-/*IncrementalDeleteNoContent The resource was deleted successfully.
-
-swagger:response incrementalDeleteNoContent
-*/
-type IncrementalDeleteNoContent struct {
-}
-
-// NewIncrementalDeleteNoContent creates IncrementalDeleteNoContent with default headers values
-func NewIncrementalDeleteNoContent() *IncrementalDeleteNoContent {
-
-	return &IncrementalDeleteNoContent{}
-}
-
-// WriteResponse to the client
-func (o *IncrementalDeleteNoContent) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
-	rw.WriteHeader(204)
-}
-
-// IncrementalDeleteInternalServerErrorCode is the HTTP code returned for type IncrementalDeleteInternalServerError
-const IncrementalDeleteInternalServerErrorCode int = 500
-
-/*IncrementalDeleteInternalServerError Error response
-
-swagger:response incrementalDeleteInternalServerError
-*/
-type IncrementalDeleteInternalServerError struct {
-	/*
-
-	 */
-	XErrorCode string `json:"X-Error-Code"`
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewIncrementalDeleteInternalServerError creates IncrementalDeleteInternalServerError with default headers values
-func NewIncrementalDeleteInternalServerError() *IncrementalDeleteInternalServerError {
-
-	return &IncrementalDeleteInternalServerError{}
-}
-
-// WithXErrorCode adds the xErrorCode to the incremental delete internal server error response
-func (o *IncrementalDeleteInternalServerError) WithXErrorCode(xErrorCode string) *IncrementalDeleteInternalServerError {
-	o.XErrorCode = xErrorCode
-	return o
-}
-
-// SetXErrorCode sets the xErrorCode to the incremental delete internal server error response
-func (o *IncrementalDeleteInternalServerError) SetXErrorCode(xErrorCode string) {
-	o.XErrorCode = xErrorCode
-}
-
-// WithPayload adds the payload to the incremental delete internal server error response
-func (o *IncrementalDeleteInternalServerError) WithPayload(payload *models.Error) *IncrementalDeleteInternalServerError {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the incremental delete internal server error response
-func (o *IncrementalDeleteInternalServerError) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *IncrementalDeleteInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	// response header X-Error-Code
-
-	xErrorCode := o.XErrorCode
-	if xErrorCode != "" {
-		rw.Header().Set("X-Error-Code", xErrorCode)
-	}
-
-	rw.WriteHeader(500)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
