# src/api/restapi/operations/version_incremental/incremental_generate_responses.go
@@ -1,124 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package version_incremental
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	models "api/models"
-)
-
-// IncrementalGenerateCreatedCode is the HTTP code returned for type IncrementalGenerateCreated
-const IncrementalGenerateCreatedCode int = 201
-
-/*IncrementalGenerateCreated Generate incremental version response
-
-swagger:response incrementalGenerateCreated
-*/
-type IncrementalGenerateCreated struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.IncrementalVersionNumber `json:"body,omitempty"`
-}
-
-// NewIncrementalGenerateCreated creates IncrementalGenerateCreated with default headers values
-func NewIncrementalGenerateCreated() *IncrementalGenerateCreated {
-
-	return &IncrementalGenerateCreated{}
-}
-
-// WithPayload adds the payload to the incremental generate created response
-func (o *IncrementalGenerateCreated) WithPayload(payload *models.IncrementalVersionNumber) *IncrementalGenerateCreated {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the incremental generate created response
-func (o *IncrementalGenerateCreated) SetPayload(payload *models.IncrementalVersionNumber) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *IncrementalGenerateCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(201)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// IncrementalGenerateInternalServerErrorCode is the HTTP code returned for type IncrementalGenerateInternalServerError
-const IncrementalGenerateInternalServerErrorCode int = 500
-
-/*IncrementalGenerateInternalServerError Error response
-
-swagger:response incrementalGenerateInternalServerError
-*/
-type IncrementalGenerateInternalServerError struct {
-	/*
-
-	 */
-	XErrorCode string `json:"X-Error-Code"`
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewIncrementalGenerateInternalServerError creates IncrementalGenerateInternalServerError with default headers values
-func NewIncrementalGenerateInternalServerError() *IncrementalGenerateInternalServerError {
-
-	return &IncrementalGenerateInternalServerError{}
-}
-
-// WithXErrorCode adds the xErrorCode to the incremental generate internal server error response
-func (o *IncrementalGenerateInternalServerError) WithXErrorCode(xErrorCode string) *IncrementalGenerateInternalServerError {
-	o.XErrorCode = xErrorCode
-	return o
-}
-
-// SetXErrorCode sets the xErrorCode to the incremental generate internal server error response
-func (o *IncrementalGenerateInternalServerError) SetXErrorCode(xErrorCode string) {
-	o.XErrorCode = xErrorCode
-}
-
-// WithPayload adds the payload to the incremental generate internal server error response
-func (o *IncrementalGenerateInternalServerError) WithPayload(payload *models.Error) *IncrementalGenerateInternalServerError {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the incremental generate internal server error response
-func (o *IncrementalGenerateInternalServerError) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *IncrementalGenerateInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	// response header X-Error-Code
-
-	xErrorCode := o.XErrorCode
-	if xErrorCode != "" {
-		rw.Header().Set("X-Error-Code", xErrorCode)
-	}
-
-	rw.WriteHeader(500)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
