# src/api/restapi/operations/version_incremental/incremental_update_responses.go
@@ -1,124 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package version_incremental
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	models "api/models"
-)
-
-// IncrementalUpdateOKCode is the HTTP code returned for type IncrementalUpdateOK
-const IncrementalUpdateOKCode int = 200
-
-/*IncrementalUpdateOK Update incremental version response
-
-swagger:response incrementalUpdateOK
-*/
-type IncrementalUpdateOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.IncrementalVersionNumber `json:"body,omitempty"`
-}
-
-// NewIncrementalUpdateOK creates IncrementalUpdateOK with default headers values
-func NewIncrementalUpdateOK() *IncrementalUpdateOK {
-
-	return &IncrementalUpdateOK{}
-}
-
-// WithPayload adds the payload to the incremental update o k response
-func (o *IncrementalUpdateOK) WithPayload(payload *models.IncrementalVersionNumber) *IncrementalUpdateOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the incremental update o k response
-func (o *IncrementalUpdateOK) SetPayload(payload *models.IncrementalVersionNumber) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *IncrementalUpdateOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// IncrementalUpdateInternalServerErrorCode is the HTTP code returned for type IncrementalUpdateInternalServerError
-const IncrementalUpdateInternalServerErrorCode int = 500
-
-/*IncrementalUpdateInternalServerError Error response
-
-swagger:response incrementalUpdateInternalServerError
-*/
-type IncrementalUpdateInternalServerError struct {
-	/*
-
-	 */
-	XErrorCode string `json:"X-Error-Code"`
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewIncrementalUpdateInternalServerError creates IncrementalUpdateInternalServerError with default headers values
-func NewIncrementalUpdateInternalServerError() *IncrementalUpdateInternalServerError {
-
-	return &IncrementalUpdateInternalServerError{}
-}
-
-// WithXErrorCode adds the xErrorCode to the incremental update internal server error response
-func (o *IncrementalUpdateInternalServerError) WithXErrorCode(xErrorCode string) *IncrementalUpdateInternalServerError {
-	o.XErrorCode = xErrorCode
-	return o
-}
-
-// SetXErrorCode sets the xErrorCode to the incremental update internal server error response
-func (o *IncrementalUpdateInternalServerError) SetXErrorCode(xErrorCode string) {
-	o.XErrorCode = xErrorCode
-}
-
-// WithPayload adds the payload to the incremental update internal server error response
-func (o *IncrementalUpdateInternalServerError) WithPayload(payload *models.Error) *IncrementalUpdateInternalServerError {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the incremental update internal server error response
-func (o *IncrementalUpdateInternalServerError) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *IncrementalUpdateInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	// response header X-Error-Code
-
-	xErrorCode := o.XErrorCode
-	if xErrorCode != "" {
-		rw.Header().Set("X-Error-Code", xErrorCode)
-	}
-
-	rw.WriteHeader(500)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
